feat: updated music bot and stopped uploading application.yml since has sensitive info

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - app-network
     depends_on:
       - db
+      - lavalink-app
 
   db:
     image: postgres:16
@@ -24,6 +25,21 @@ services:
       - app-network
     ports:
       - "5432:5432"
+
+  lavalink-app:
+    image: openjdk:22-slim
+    volumes:
+      - ./bot/music:/usr/local/share/lavalink
+    working_dir: /usr/local/share/lavalink
+    command: java -jar Lavalink.jar
+    networks:
+      - app-network
+    ports:
+      - "2333:2333"
+    environment:
+      SPRING_CONFIG_LOCATION: file:./application.yml
+    depends_on:
+      - db
 
 networks:
   app-network:
