--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - ./bot:/usr/local/share/bot
     working_dir: /usr/local/share/bot
-    command: python bot.py
+    command: python main.py
     networks:
       - app-network
     logging:
@@ -21,7 +21,8 @@ services:
     environment:
       POSTGRES_DB: darkbot
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: ${DB_PASS}
+      POSTGRES_PASSWORD: d@rk-b0t!236a
+      # POSTGRES_PASSWORD: ${DB_PASS}
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks:
