added redis server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,15 +14,14 @@ services:
         max-size: 10m
     depends_on:
       - db
+      - redis
       # - lavalink-app
 
   db:
     image: postgres:16
     environment:
-      POSTGRES_DB: darkbot
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: d@rk-b0t!236a
-      # POSTGRES_PASSWORD: ${DB_PASS}
+      POSTGRES_PASSWORD: ${DB_PASS}
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks:
@@ -33,9 +32,29 @@ services:
       options:
         max-size: 10m
 
+
+  redis:
+    image: redis:6-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    environment:
+      REDIS_ENABLED: "true"
+      REDIS_HOST: "redis"
+      REDIS_PORT: "6379"
+      REDIS_DB: "0"
+    volumes:
+      - redisdata:/data
+    networks:
+      - app-network
+    logging:
+      options:
+        max-size: 10m
+
 networks:
   app-network:
     driver: bridge
 
 volumes:
   pgdata:
+  redisdata:
