added docstrings to cogs

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -1,14 +1,21 @@
-DBNAME=
-DBUSER=
-DBPASS=
-DBHOST=
-DBPORT=
 DISCORD_TOKEN=
 OWNER_ID=
 YOUTUBE_EMAIL=
 YOUTUBE_PASS=
 LAVALINK_PASS=
 LAVALILNK_SERVER=
-API_COINCAP=
+API_COINCAP=-
 IP_INFO=
 KSOFT_APT=
+DB_HOST=
+DB_PORT=
+DB_NAME=
+DB_USER=
+DB_PASS=
+REDIS_ENABLED=
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
+REDIS_DB=
+REDIS_KEY_PREFIX=
+DEVELOPMENT_GUILD_ID=
