fixed issue with bg api 401

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -12,6 +12,9 @@ DB_PORT=
 DB_NAME=
 DB_USER=
 DB_PASS=
+# Optional: provide a BGG session cookie if you need to fetch private user collections.
+# Example: BGG_COOKIE="bb=abc123; othercookie=..."
+BGG_COOKIE=
 REDIS_ENABLED=
 REDIS_HOST=
 REDIS_PORT=
