--- a/bot/.env.example
+++ b/bot/.env.example
@@ -16,7 +16,7 @@ DB_PASS=
 # Example: BGG_COOKIE="bb=abc123; othercookie=..."
 BGG_COOKIE=
 REDIS_ENABLED=
-REDIS_HOST=
+REDIS_HOST=127.0.0.1 # default falls back to 127.0.0.1 for local dev; in Docker use 'redis'
 REDIS_PORT=
 REDIS_PASSWORD=
 REDIS_DB=
