--- a/bot/.env.example
+++ b/bot/.env.example
@@ -2,8 +2,8 @@ DISCORD_TOKEN=
 OWNER_ID=
 YOUTUBE_EMAIL=
 YOUTUBE_PASS=
-LAVALINK_PASS=
-LAVALILNK_SERVER=
+LAVALINK_PASS=youshallnotpass
+LAVALINK_SERVER=http://lavalink:2333
 API_COINCAP=-
 IP_INFO=
 KSOFT_APT=
@@ -15,9 +15,9 @@ DB_PASS=
 # Optional: provide a BGG session cookie if you need to fetch private user collections.
 # Example: BGG_COOKIE="bb=abc123; othercookie=..."
 BGG_COOKIE=
-REDIS_ENABLED=
-REDIS_HOST=127.0.0.1 # default falls back to 127.0.0.1 for local dev; in Docker use 'redis'
-REDIS_PORT=
+REDIS_ENABLED=true
+REDIS_HOST=redis
+REDIS_PORT=6379
 REDIS_PASSWORD=
 REDIS_DB=
 REDIS_KEY_PREFIX=
