added check for API

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -6,7 +6,13 @@ LAVALINK_PASS=youshallnotpass
 LAVALINK_SERVER=http://lavalink:2333
 API_COINCAP=-
 IP_INFO=
-KSOFT_APT=
+KSOFT_API=
+WEATHER_API_KEY=
+YOUTUBE_API_KEY=
+SPOTIFY_API=
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+CHATGPT_SECRET=
 DB_HOST=
 DB_PORT=
 DB_NAME=
